# banking_datalake_project

./: .env.example  .gitignore  Makefile  README.md  plan.md  pyproject.toml
catalog/tags/: classification.yaml
config/: base.yaml  dev.yaml  prod.yaml  staging.yaml
docs/: architecture.md
docs/adr/: 001-delta-vs-iceberg.md  002-partitioning-strategy.md  003-dq-tiered-severity.md
docs/runbooks/: partition_explosion.md  quarantine_drain.md  schema_drift.md
infra/docker/: docker-compose.yml
infra/terraform/: main.tf  variables.tf
ingestion/: __init__.py
ingestion/batch/: __init__.py  api_ingestor.py  file_ingestor.py  jdbc_ingestor.py
ingestion/kafka/: __init__.py
ingestion/utils/: __init__.py  checkpointing.py  schema_registry.py
lakehouse/: __init__.py  runtime.py
lakehouse/bronze/: __init__.py  quarantine.py  schema_evolution.py  writer.py
lakehouse/gold/: __init__.py  aggregator.py  incremental_merge.py  mart_builder.py
lakehouse/silver/: __init__.py  cleaner.py  conformer.py  deduplicator.py  late_arrivals.py  processor.py  timezone_normalizer.py
observability/: __init__.py
observability/dashboards/: grafana_dq.json  grafana_pipeline.json
optimization/: __init__.py  bloom_filters.py  compactor.py  partition_monitor.py  vacuumer.py  zordering.py
orchestration/: __init__.py
quality/: __init__.py  drift_detector.py  profiler.py  quarantine_handler.py  validator.py
scripts/: backfill.py  bootstrap.sh  create_tables.py  reprocess_quarantine.py  seed_kafka.py
transforms/: dbt_project.yml  profiles.yml
transforms/models/: sources.yml
(+73 files in other folders)
